# media

./: CMakeLists.txt  README.md  pyproject.toml
src/: extern.h  hash.c  hash.h  image.h  medit.c  medit.h  mesh.c  mesh.h  persp.c  sproto.h
src/drawing/: animat.c  camera.c  clip.c  clipvol.c  critip.c  dlists.c  geometry.c  grafic.h  ilists.c  items.c  keyboard.c  listnum.c  menus.c  mlists.c  morphing.c  mouse.c  normal.c  picking.c  scene.c  scissor.c  sftcpy.c  status.c  stream.c  tiles.c  util.c
src/formats/: bbfile.c  formats.h  gisfil.c  image.c  inmsh2.c  inout.c  libmesh5.c  psfile.c
src/program/: parsar.c  parsop.c
src/shapes/: cube.c  ellipse.c  particle.c  path.c  vector.c
src/utilities/: cenrad.c  chrono.h  memory.c  transform.c  transform.h
